2005-10-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/generic-vars.make (DIST_FILES): Fix
	src-wildcard, remove $(wildcard).

	* po/GNUmakefile (PO_FILES): 
	* ps/GNUmakefile (PS_FILES): 
	* tex/GNUmakefile (TEX_FILES): 
	* cygwin/GNUmakefile (POSTINSTALLS):
	* vim/GNUmakefile (EXTRA_DIST_FILES): Bugfix: [etags sr?] missed
	some wildcard calls.

2005-10-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* THANKS: add Thomas Bushnell.

2005-10-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm: Remove horrendous running-from-gui? kludge.
	(lilypond-main): Redirect to gui-main if 'gui is set.
	Backportme.

	* scripts/midi2ly.py (datadir): Add libdir iso datadir to path,
	for alternative installations kludging s/share/lib/g
	LILYPONDPREFIX. Backportme.

	* SConstruct (libdir_package_version): Define.

	* python/SConscript: 
	* python/GNUmakefile (INSTALLATION_OUT_DIR): Install binary .so
	module in libdir.  Backportme.

2005-10-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc: clarify --safe.

2005-10-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.7.14
	
	* Documentation/user/*.itely: remove minimumVerticalExtent.

	* scm/define-grobs.scm (all-grob-descriptions): remove
	RemoveEmptyVerticalGroup

	* lily/hara-kiri-engraver.cc (get_spanner): create VerticalAxisGroup.

	* lily/include/lily-guile.hh (GUILE_ELLIPSIS): define to get clean
	compile on MOSX

	* python/convertrules.py (conv): add rules.

	* lily/grob.cc: remove is_empty()

	* lily/grob-property.cc: remove add_to_list_property().

	* scripts/convert-ly.py (datadir): add prefix switching hack to
	.py too.

	* input/mutopia/W.A.Mozart/mozart-hrn3-defs.ily (cresc): remove
	space-function tweak.

	* lily/grob.cc: remove X-extent-callback / Y-extent-callback.

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove callback property.

	* lily/include/grob.hh (class Grob): remove property_callbacks_